--- a/SkeD/app/templates/app/layout.html
+++ b/SkeD/app/templates/app/layout.html
@@ -14,6 +14,41 @@
 </head>
 
 <body>
+
+        <header class="header-main"> 
+            <div class="navbar navbar-inverse navbar-fixed-top" role="navigation"> 
+                <div class="container"> 
+                    <div class="navbar-header"> 
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse"> 
+                            <span class="sr-only">Toggle navigation</span> 
+                            <span class="icon-bar"></span> 
+                            <span class="icon-bar"></span> 
+                            <span class="icon-bar"></span> 
+                        </button>                         
+                        <a class="navbar-brand" href="#">SkeD</a> 
+                    </div>                     
+                    <div class="collapse navbar-collapse"> 
+                        <ul class="nav navbar-nav"> 
+                            <li class="active">
+                                <a href="index.html">Home</a>
+                            </li>                             
+                        </ul>                         
+                        <ul class="nav navbar-nav navbar-sub pull-right"> 
+                            <li>
+                                <a href="#">Login</a>
+                            </li>                             
+                            <li>
+                                <a href="#">Post a Job</a>
+                            </li>                             
+                            <li>
+                                <a href="#">Create your skill profile</a>
+                            </li>                             
+                        </ul>                         
+                    </div>
+                    <!--/.nav-collapse -->                     
+                </div>                 
+            </div>             
+        </header>
 {% block content %}
 
 {% endblock %}
